@startuml
'https://plantuml.com/class-diagram

class Championnat{

- nom : string

+ ajouterEquipe(equipe : Equipe) : void
+ getNombreEquipe() : int

}

class Equipe{

- nom : string
- nombreLike : int

+ incrementerNombreLikes() : void
+ ajouterJoueur(joueur : Joueur) : void
}

class Joueur{

- nom : string
- prenom : string

+ changerPoste(poste : Poste)
}

class Poste{

- nom : string

}

Championnat -->"0..* " Equipe
Equipe -->"0..* " Joueur
Joueur -->"1..1 " Poste

@enduml